[package]
name = "print-break"
version = "0.1.1"
edition = "2021"
description = "A simple debugging macro that pretty-prints variables and pauses execution"
license = "MIT"
repository = "https://github.com/babinc/print-break"
keywords = ["debug", "breakpoint", "print", "macro"]
categories = ["development-tools::debugging"]

[dependencies]
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
